[feat/backend-skills] refactor: move invite code creation to user handler
